Fix startup issues

--- a/.SuperAttract/SuperAttractSystem.ini
+++ b/.SuperAttract/SuperAttractSystem.ini
@@ -60,6 +60,12 @@
 # Thanks for the contributions and support:
 # kaloun34, redsteakraw, RetroDriven, LamerDeluxe, InquisitiveCoder, Sigismond
 
+# Save our PID and process
+declare -g sampid="${$}"
+declare -g samprocess=$(basename -- ${0})
+declare -g repository_url="https://github.com/mrchrisster/MiSTer_SAM"
+declare -g branch="main"
+
 # ======== GLOBAL VARIABLES =========
 declare -g mrsamtmp="/tmp/.SAM_tmp"
 declare -g userstartup="${misterpath}/linux/user-startup.sh"
@@ -119,12 +125,6 @@ declare -gA tty_currentinfo=(
 	[update_pause]=${ttyupdate_pause}
 )
 
-# Save our PID and process
-declare -g sampid="${$}"
-declare -g samprocess=$(basename -- ${0})
-declare -g repository_url="https://github.com/mrchrisster/MiSTer_SAM"
-declare -g branch="main"
-
 #======== INI VARIABLES ========
 # Change these in the INI file
 declare -gl listenmouse="Yes"
@@ -136,6 +136,17 @@ declare -g amigashared="${CORE_PATH_FINAL[amiga]}/shared"
 
 # ======== BGM =======
 declare -gl bgm="No"
+
+function createfolders() {
+	# Create folders if they don't exist
+	[[ ! -d "${mrsampath}" ]] && mkdir -p "${mrsampath}"
+	[[ ! -d "${mrsamtmp}" ]] && mkdir -p "${mrsamtmp}"
+	[[ ! -d "${gamelistpath}" ]] && mkdir -p "${gamelistpath}"
+	[[ ! -d "${gamelistpathtmp}" ]] && mkdir -p "${gamelistpathtmp}"
+	[[ ! -d "${excludepath}" ]] && mkdir -p "${excludepath}"
+	[[ ! -d "${mrsamtmp}/SAM_config" ]] && mkdir -p "${mrsamtmp}/SAM_config"
+	[[ ! -d "${misterpath}/bootrom" ]] && mkdir -p "${misterpath}/bootrom"
+}
 
 function init_vars() {
 	# ======== LOCAL VARIABLES ========
@@ -217,39 +228,41 @@ function init_default_path_vars() {
 }
 
 function init_default_paths() {
-	# Default rom path search directories
-	declare -ga GAMESDIR_FOLDERS=(
-		/media/usb7/games
-		/media/usb6/games
-		/media/usb5/games
-		/media/usb4/games
-		/media/usb3/games
-		/media/usb2/games
-		/media/usb1/games
-		/media/usb0/games
-		${misterpath}/cifs/games
-		${misterpath}/games
-		/media/usb7
-		/media/usb6
-		/media/usb5
-		/media/usb4
-		/media/usb3
-		/media/usb2
-		/media/usb1
-		/media/usb0
-		${misterpath}/cifs
-		${misterpath}
-	)
+	if [[ ! -s "${mrsamtmp}/default_paths" ]]; then
+		# Default rom path search directories
+		declare -ga GAMESDIR_FOLDERS=(
+			/media/usb7/games
+			/media/usb6/games
+			/media/usb5/games
+			/media/usb4/games
+			/media/usb3/games
+			/media/usb2/games
+			/media/usb1/games
+			/media/usb0/games
+			${misterpath}/cifs/games
+			${misterpath}/games
+			/media/usb7
+			/media/usb6
+			/media/usb5
+			/media/usb4
+			/media/usb3
+			/media/usb2
+			/media/usb1
+			/media/usb0
+			${misterpath}/cifs
+			${misterpath}
+		)
 
-	declare -g GET_SYSTEM_FOLDER_GAMESDIR=""
-	declare -g GET_SYSTEM_FOLDER_RESULT=""
-	if [ ${usedefaultpaths} == "yes" ]; then
-		echo "" | >${mrsamtmp}/default_paths
+		declare -g GET_SYSTEM_FOLDER_GAMESDIR=""
+		declare -g GET_SYSTEM_FOLDER_RESULT=""
+		echo "" | >"${mrsamtmp}/default_paths"
 		for core in ${corelistall}; do
 			defaultpath "${core}"
 			# write to output file
-			echo $(declare -p ${core}path | sed 's/declare -- //') >>${mrsamtmp}/default_paths
+			echo $(declare -p ${core}path | sed 's/declare -- //') >>"${mrsamtmp}/default_paths"
 		done
+	else
+		[[ -s ${mrsamtmp}/default_paths ]] && source "${mrsamtmp}/default_paths"
 	fi
 }
 
@@ -301,33 +314,37 @@ function defaultpath() {
 }
 
 function init_amigashared_path() {
-	var=$(grep shared_folder= ${misterpath}/Mister.ini | sed -e 's/shared_folder=//')
-	#samdebug " Grep got ${var}"
-	if [ ! -z "${var}" ]; then
-		samdebug " Variable is not empty"
-		if [ ! -d ${var} ]; then
-			samdebug " Variable is not a valid directory"
-			if [ "${var: -1}" != "/" ]; then
-				samdebug " Variable does not contain / in the last position"
-				var=$(echo ${var} | sed 's:/.$::')
+	if [[ ! -s "${mrsamtmp}/amigashared_path" ]]; then
+		var=$(grep shared_folder= ${misterpath}/Mister.ini | sed -e 's/shared_folder=//')
+		#samdebug " Grep got ${var}"
+		if [ ! -z "${var}" ]; then
+			samdebug " Variable is not empty"
+			if [ ! -d ${var} ]; then
+				samdebug " Variable is not a valid directory"
+				if [ "${var: -1}" != "/" ]; then
+					samdebug " Variable does not contain / in the last position"
+					var=$(echo ${var} | sed 's:/.$::')
+				fi
 			fi
-		fi
-		if [ -d ${var} ]; then
-			samdebug " Variable is a valid directory"
-			if [ "${var: -1}" == "/" ]; then
-				samdebug " Variable contains / in the last position"
-				var="${var::${#var}-1}"
+			if [ -d ${var} ]; then
+				samdebug " Variable is a valid directory"
+				if [ "${var: -1}" == "/" ]; then
+					samdebug " Variable contains / in the last position"
+					var="${var::${#var}-1}"
+				fi
+				samdebug " Setting the amigashared variable"
+				amigashared="${var}"
 			fi
-			samdebug " Setting the amigashared variable"
-			amigashared="${var}"
+		#else
+			#samdebug " Variable is empty sticking with default"
 		fi
-	#else
-		#samdebug " Variable is empty sticking with default"
-	fi
 
-	# write to output file
-	echo "amigashared=${amigashared}" >${mrsamtmp}/amigashared_path
-	#samquiet " Amigashared directory is ${amigashared} "
+		# write to output file
+		echo "amigashared=${amigashared}" >"${mrsamtmp}/amigashared_path"
+	else
+		[[ -s ${mrsamtmp}/amigashared_path ]] && source "${mrsamtmp}/amigashared_path"
+		samquiet " Amigashared directory is ${amigashared} "
+	fi
 }
 
 function samdebug() {
@@ -428,6 +445,7 @@ function startup_tasks() {
 	init_default_path_vars
 	read_samini
 	init_excludes
+	createfolders
 	init_default_paths
 	init_amigashared_path
 }
