Reclaim a bit of memory after all configs are loaded

--- a/.SuperAttract/SuperAttractSystem.ini
+++ b/.SuperAttract/SuperAttractSystem.ini
@@ -140,6 +140,7 @@ function init_vars() {
 		# ======== BGM =======
 		declare -gl bgm=${ini_settings[bgm]:="no"}
 	fi
+	unset ini_settings
 }
 
 function createfolders() {
