--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -19,7 +19,7 @@ gametimer=180
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: amiga arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
+# Valid options: amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd psx
 corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 # When SAM starts, mute global or core volume. Core volume can't be muted completely.
@@ -42,85 +42,10 @@ roulettetimer="500"
 # "Yes" shows the text name of the game being played - NOT the standard core name graphic
 ttyenable="No"
 
-#-------- EXCLUDE LISTS --------
-# One game per line
-# Trailing quote is required!
-
-arcadeexclude="First Bad Game.mra
-Second Bad Game.mra
-Third Bad Game.mra"
-
-atari2600exclude="First Bad Game.a26
-Second Bad Game.a26
-Third Bad Game.a26"
-
-atari5200exclude="First Bad Game.a52
-Second Bad Game.a52
-Third Bad Game.a52"
-
-atari7800exclude="First Bad Game.a78
-Second Bad Game.a78
-Third Bad Game.a78"
-
-atarilynxexclude="First Bad Game.lnx
-Second Bad Game.lnx
-Third Bad Game.lnx"
-
-c64exclude="First Bad Game.crt
-Second Bad Game.crt
-Third Bad Game.crt"
-
-fdsexclude="First Bad Game.fds
-Second Bad Game.fds
-Third Bad Game.fds"
-
-gbaexclude="First Bad Game.gba
-Second Bad Game.gba
-Third Bad Game.gba"
-
-genesisexclude="First Bad Game.md
-Second Bad Game.md
-Third Bad Game.md"
-
-ggexclude="First Bad Game.gg
-Second Bad Game.gg
-Third Bad Game.gg"
-
-megacdexclude="First Bad Game.chd
-Second Bad Game.chd
-Third Bad Game.chd"
-
-neogeoexclude="First Bad Game.neo
-Second Bad Game.neo
-Third Bad Game.neo"
-
-nesexclude="First Bad Game.nes
-Second Bad Game.nes
-Third Bad Game.nes"
-
-s32xexclude="First Bad Game.32x
-Second Bad Game.32x
-Third Bad Game.32x"
-
-smsexclude="First Bad Game.sms
-Second Bad Game.sms
-Third Bad Game.sms"
-
-snesexclude="First Bad Game.sfc
-Second Bad Game.sfc
-Third Bad Game.sfc"
-
-tgfx16exclude="First Bad Game.pce
-Second Bad Game.pce
-Third Bad Game.pce"
-
-tgfx16cdexclude="First Bad Game.chd
-Second Bad Game.chd
-Third Bad Game.chd"
-
-psxexclude="First Bad Game.chd
-Second Bad Game.chd
-Third Bad Game.chd"
+# -------- BGM SETTINGS -------
+# BGM settings
+# SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ) but you have to set it up in the SAM menu first (Select "Background Music Player")
+bgm="No"
 
 # FOLDER AND FILE EXCLUSION
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
@@ -139,51 +64,6 @@ exclude=( vgm readme hes-v3 unsupported sounds music palettes )
 listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
-
-# -------- GAME LISTS --------
-
-# SAM creates game lists for each core which contains every rom's location. 
-# This process will take a while on startup
-
-# create_all_gamelists="No" means gamelists will be created the first time a core is selected
-# create_all_gamelists="Yes" means all the gamelists will be created the first time the script is run
-create_all_gamelists="No"
-
-# This option controls when game lists will be regenerated automatically on startup
-# Valid values are "Hour Day Week Always Never"
-# Always will regenerate every time you start SAM
-# Never will regenerate in a few hundred years :) So, not really never, but, close enough.
-rebuild_freq="Week"
-
-# Arcade cores get updated a lot so we update gamelists more often
-rebuild_freq_arcade="Week"
-
-# -------- GAME PATHS --------
-# Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
-
-# Default - all arcade games
-amigapath="/media/fat/Games/Amiga"
-arcadepath="/media/fat/_Arcade"
-atari2600path="/media/fat/Games/Atari7800"
-atari5200path="/media/fat/Games/Atari5200"
-atari7800path="/media/fat/Games/Atari7800"
-atarilynxpath="/media/fat/Games/AtariLynx"
-c64path="/media/fat/Games/C64"
-fdspath="/media/fat/games/NES"
-gbpath="/media/fat/games/Gameboy"
-gbcpath="/media/fat/games/Gameboy"
-gbapath="/media/fat/games/GBA"
-genesispath="/media/fat/games/Genesis"
-ggpath="/media/fat/games/SMS"
-megacdpath="/media/fat/games/MegaCD"
-neogeopath="/media/fat/games/NeoGeo"
-nespath="/media/fat/games/NES"
-s32xpath="/media/fat/games/S32X"
-smspath="/media/fat/games/SMS"
-snespath="/media/fat/games/SNES"
-tgfx16path="/media/fat/games/TGFX16"
-tgfx16cdpath="/media/fat/games/TGFX16-CD"
-psxpath="/media/fat/games/PSX"
 
 #-------- CORE PATHS EXTRA --------
 # If you want only subdirectories being used, define them here
@@ -214,51 +94,12 @@ tgfx16pathextra=""
 tgfx16cdpathextra=""
 psxpathextra=""
 
-#-------- CORE PATHS RBF --------
-amigapathrbf="_Computer"
-arcadepathrbf="_Arcade"
-atari2600pathrbf="_Console"
-atari5200pathrbf="_Console"
-atari7800pathrbf="_Console"
-atarilynxpathrbf="_Console"
-c64pathrbf="_Computer"
-fdspathrbf="_Console"
-gbpathrbf="_Console"
-gbcpathrbf="_Console"
-gbapathrbf="_Console"
-genesispathrbf="_Console"
-ggpathrbf="_Console"
-megacdpathrbf="_Console"
-neogeopathrbf="_Console"
-nespathrbf="_Console"
-s32xpathrbf="_Console"
-smspathrbf="_Console"
-snespathrbf="_Console"
-tgfx16pathrbf="_Console"
-tgfx16cdpathrbf="_Console"
-psxpathrbf="_Console"
-
-# The following option uses the default rom locations that MiSTer and all cores use by default
-# Setting this to "yes" is only recommended if you have trouble with the default method. 
-# It can cause significant delay on startup.
-usedefaultpaths="No"
-
-# -------- NeoGeo Full Titles -------
-# Options are English and JAPANESE
-# Not all games have an alternate Japanese Name, in that case, The English Title is used
-neogeoregion="English"
-useneogeotitles="Yes"
-
 # -------- TTY2OLED ADVCANCED SETTINGS -------
 # All needed values are read from the tty2oled INI files
 
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 ttyuseack="Yes"
-
-# BGM settings
-# SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ) but you have to set it up in the SAM menu first (Select "Background Music Player")
-bgm="No"
 
 # SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
