--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -65,34 +65,10 @@ listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
 
-#-------- CORE PATHS EXTRA --------
-# If you want only subdirectories being used, define them here
-# Example:
-# arcadepathextra="/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
-# Path must begin with /
+#-------- CORE PATHS --------
+# SAM finds all your files automatically, except for amiga
+amigapath="/media/fat/Games/Amiga"
 
-amigapathextra=""
-arcadepathextra=""
-atari2600pathextra=""
-atari5200pathextra=""
-atari7800pathextra=""
-atarilynxpathextra=""
-c64pathextra=""
-fdspathextra=""
-gbpathextra=""
-gbcpathextra=""
-gbapathextra=""
-genesispathextra=""
-ggpathextra=""
-megacdpathextra=""
-neogeopathextra=""
-nespathextra=""
-s32xpathextra=""
-smspathextra=""
-snespathextra=""
-tgfx16pathextra=""
-tgfx16cdpathextra=""
-psxpathextra=""
 
 # -------- TTY2OLED ADVCANCED SETTINGS -------
 # All needed values are read from the tty2oled INI files
