Optimize config loading
Memory usage is now lower
TGFX16cd still has issues

--- a/.SuperAttract/SuperAttractSystem.ini
+++ b/.SuperAttract/SuperAttractSystem.ini
@@ -35,34 +35,10 @@ declare -g samprocess=$(basename -- ${0})
 declare -g mrsamtmp="/tmp/.SAM_tmp"
 declare -g userstartup="${misterpath}/linux/user-startup.sh"
 declare -g userstartuptpl="${misterpath}/linux/_user-startup.sh"
+declare -g corenamefile="/tmp/CORENAME"
+declare -g corename_name=$(<${corenamefile})
 
-function init_vars() {
-	declare -g gamelistpath="${mrsampath}/SAM_Gamelists"
-	declare -g gamelistpathtmp="/tmp/.SAM_List"
-	declare -g excludepath="${mrsampath}/SAM_Excludelists"
-	declare -g corename_file="/tmp/CORENAME"
-	declare -g corename_name=$(printf '%s\n' $(<${corename_file}))
-	declare -gl corelistall="amiga arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx"
-	declare -g amigashared="${CORE_PATH_FINAL[amiga]}/shared"
-
-	# Named Pipes
-	declare -g SAM_cmd_pipe="${mrsamtmp}/SAM_cmd_pipe"
-	declare -g MCP_cmd_pipe="${mrsamtmp}/MCP_cmd_pipe"
-	declare -g TTY_cmd_pipe="${mrsamtmp}/TTY_cmd_pipe"
-	declare -g SAM_Activity_pipe="${mrsamtmp}/SAM_Activity_pipe"
-	declare -g MCP_Activity_pipe="${mrsamtmp}/MCP_Activity_pipe"
-	declare -g MCP_Corename_Activity_pipe="${mrsamtmp}/MCP_CoreName_Activity_pipe"
-	declare -g MCP_CoreName_Change_pipe="${mrsamtmp}/MCP_CoreName_Change_pipe"
-	declare -g MCP_DeviceChange_pipe="${mrsamtmp}/MCP_DeviceChange_pipe"
-
-	# ======== GLOBAL VARIABLES =========
-	declare -gl usedefaultpaths=${ini_settings[usedefaultpaths]:="yes"}
-	declare -gl listenmouse=${ini_settings[listenmouse]:="yes"}
-	declare -gl listenkeyboard=${ini_settings[listenkeyboard]:="yes"}
-	declare -gl listenjoy=${ini_settings[listenjoy]:="yes"}
-	declare -gi samtimeout=${ini_settings[samtimeout]:=60}
-	declare -gi bootsleep=${ini_settings[bootsleep]:=60}
-
+function init_gamelist_vars() {
 	# ======== GAMELIST VARIABLES =========
 	declare -gl create_all_gamelists=${ini_settings[create_all_gamelists]:="no"}
 	declare -gl rebuild_freq=${ini_settings[rebuild_freq]:="week"}
@@ -77,7 +53,13 @@ function init_vars() {
 	declare -gl samindex=${ini_settings[samindex]:="no"}
 	declare -gl neogeoregion=${ini_settings[neogeoregion]:="english"}
 	declare -gl useneogeotitles=${ini_settings[useneogeotitles]:="yes"}
+	init_excludes
+	[[ ! -d "${gamelistpath}" ]] && mkdir -p "${gamelistpath}"
+	[[ ! -d "${gamelistpathtmp}" ]] && mkdir -p "${gamelistpathtmp}"
+	[[ ! -d "${excludepath}" ]] && mkdir -p "${excludepath}"
+}
 
+function init_tty2oled_vars() {
 	# ======== TTY2OLED =======
 	declare -gl ttyenable=${ini_settings[ttyenable]:="no"}
 	declare -gi ttyupdate_pause=10
@@ -91,19 +73,42 @@ function init_vars() {
 		[name_scroll_direction]=1
 		[update_pause]=${ttyupdate_pause}
 	)
+}
 
+function startup_tasks() {
+	# Named Pipes
+	declare -g SAM_cmd_pipe="${mrsamtmp}/SAM_cmd_pipe"
+	declare -g MCP_cmd_pipe="${mrsamtmp}/MCP_cmd_pipe"
+	declare -g TTY_cmd_pipe="${mrsamtmp}/TTY_cmd_pipe"
+	declare -g SAM_Activity_pipe="${mrsamtmp}/SAM_Activity_pipe"
+	declare -g MCP_Activity_pipe="${mrsamtmp}/MCP_Activity_pipe"
+	declare -g MCP_Corename_Activity_pipe="${mrsamtmp}/MCP_CoreName_Activity_pipe"
+	declare -g MCP_CoreName_Change_pipe="${mrsamtmp}/MCP_CoreName_Change_pipe"
+	declare -g MCP_DeviceChange_pipe="${mrsamtmp}/MCP_DeviceChange_pipe"
+
+	# ======== GLOBAL VARIABLES =========
+	declare -gl listenmouse=${ini_settings[listenmouse]:="yes"}
+	declare -gl listenkeyboard=${ini_settings[listenkeyboard]:="yes"}
+	declare -gl listenjoy=${ini_settings[listenjoy]:="yes"}
+	declare -gi samtimeout=${ini_settings[samtimeout]:=60}
+	declare -gi bootsleep=${ini_settings[bootsleep]:=60}
 
 	# ======== LOCAL VARIABLES ========
 	if [ "${samprocess}" == "SuperAttract_init" ]; then
-		foo="bar"
+		declare -gl corelistall="amiga arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx"
 		# From ini
-		init_default_path_vars
+		declare -g amigashared=${ini_settings[amigashared]:="${CORE_PATH_FINAL[amiga]}/shared"}
+		declare -gl usedefaultpaths=${ini_settings[usedefaultpaths]:="yes"}
+		createfolders
+		init_game_path_final
+		init_amigashared_path
 	elif [ "${samprocess}" == "SuperAttract_MCP" ]; then
 		declare -gi MCP_timeout=60
 		declare -gi MCP_counter=${MCP_timeout}
 		declare -g MCP_timeout_minutes=
 		# From ini
 		declare -gl menuonly=${ini_settings[menuonly]:="yes"}
+		init_tty2oled_vars
 	elif [ "${samprocess}" == "SuperAttract_tty2oled" ]; then
 		declare -g ttydevice="/dev/ttyUSB0"
 		declare -g ttypicture="/media/fat/tty2oled/pics"
@@ -116,7 +121,9 @@ function init_vars() {
 		declare -gi ttyscroll_speed_int=$((${ttyscroll_speed} - 1))
 		declare -g ttysystemini=${ini_settings[ttysystemini]:="/media/fat/tty2oled/tty2oled-system.ini"}
 		declare -g ttyuserini=${ini_settings[ttyuserini]:="/media/fat/tty2oled/tty2oled-user.ini"}
+		init_tty2oled_vars
 	elif [ "${samprocess}" == "Super_Attract_Mode.sh" ]; then
+		declare -gl corelistall="amiga arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx"
 		declare -gi speedtest=0
 		declare -gi inmenu=0
 		declare -gi coreretries=3
@@ -129,7 +136,12 @@ function init_vars() {
 		declare -gl disablebootrom="Yes"
 		declare -g tmpfile="${gamelistpathtmp}/tmpfile"
 		declare -g tmpfile2="${gamelistpathtmp}/tmpfile2"
+		declare -g gamelistpath="${mrsampath}/SAM_Gamelists"
+		declare -g gamelistpathtmp="/tmp/.SAM_List"
+		declare -g excludepath="${mrsampath}/SAM_Excludelists"
 	# From ini
+		declare -g amigashared=${ini_settings[amigashared]:="${CORE_PATH_FINAL[amiga]}/shared"}
+		declare -gl usedefaultpaths=${ini_settings[usedefaultpaths]:="yes"}
 		declare -gi gametimer=${ini_settings[gametimer]:=120}
 		declare -g corelist=${ini_settings[corelist]:-${corelistall}}
 		declare -gl mute=${ini_settings[mute]:="core"}
@@ -141,9 +153,11 @@ function init_vars() {
 		declare -g branch=${ini_settings[branch]:="main"}
 		# ======== BGM =======
 		declare -gl bgm=${ini_settings[bgm]:="no"}
-		init_rbf_vars
+		init_game_path_final
+		init_amigashared_path
 		init_data # Setup data arrays
-		kill_rbf_vars
+		init_gamelist_vars
+		init_tty2oled_vars
 	fi
 	unset ini_settings
 }
@@ -152,14 +166,11 @@ function createfolders() {
 	# Create folders if they don't exist
 	[[ ! -d "${mrsampath}" ]] && mkdir -p "${mrsampath}"
 	[[ ! -d "${mrsamtmp}" ]] && mkdir -p "${mrsamtmp}"
-	[[ ! -d "${gamelistpath}" ]] && mkdir -p "${gamelistpath}"
-	[[ ! -d "${gamelistpathtmp}" ]] && mkdir -p "${gamelistpathtmp}"
-	[[ ! -d "${excludepath}" ]] && mkdir -p "${excludepath}"
 	[[ ! -d "${mrsamtmp}/SAM_config" ]] && mkdir -p "${mrsamtmp}/SAM_config"
 	[[ ! -d "${misterpath}/bootrom" ]] && mkdir -p "${misterpath}/bootrom"
 }
 
-function init_default_path_vars() {
+function init_game_path_vars() {
 	# ======== CORE PATHS ========
 	declare -g amigapath=${ini_settings[amigapath]:="${misterpath}/Games/Amiga"}
 	declare -g arcadepath=${ini_settings[arcadepath]:="${misterpath}/_Arcade"}
@@ -209,6 +220,56 @@ function init_default_path_vars() {
 	declare -g psxpathextra=${ini_settings[psxpathextra]:=}
 }
 
+function kill_game_path_vars() {
+	# ======== CORE PATHS ========
+	unset amigapath
+	unset arcadepath
+	unset atari2600path
+	unset atari5200path
+	unset atari7800path
+	unset atarilynxpath
+	unset c64path
+	unset fdspath
+	unset gbpath
+	unset gbcpath
+	unset gbapath
+	unset genesispath
+	unset ggpath
+	unset megacdpath
+	unset neogeopath
+	unset nespath
+	unset s32xpath
+	unset smspath
+	unset snespath
+	unset tgfx16path
+	unset tgfx16cdpath
+	unset psxpath
+
+	# ======== CORE PATHS EXTRA ========
+	unset amigapathextra
+	unset arcadepathextra
+	unset atari2600pathextra
+	unset atari5200pathextra
+	unset atari7800pathextra
+	unset atarilynxpathextra
+	unset c64pathextra
+	unset fdspathextra
+	unset gbpathextra
+	unset gbcpathextra
+	unset gbapathextra
+	unset genesispathextra
+	unset ggpathextra
+	unset megacdpathextra
+	unset neogeopathextra
+	unset nespathextra
+	unset s32xpathextra
+	unset smspathextra
+	unset snespathextra
+	unset tgfx16pathextra
+	unset tgfx16cdpathextra
+	unset psxpathextra
+}
+
 function init_final_paths() {
 	# Core to path mappings
 	declare -gA CORE_PATH_FINAL=(
@@ -237,7 +298,8 @@ function init_final_paths() {
 	)
 }
 
-function init_default_paths() {
+function init_game_path_final() {
+	init_game_path_vars
 	if [ "${usedefaultpaths}" == "yes" ]; then
 		if [[ ! -s "${mrsamtmp}/default_paths" ]]; then
 			# Default rom path search directories
@@ -270,10 +332,16 @@ function init_default_paths() {
 			for core in ${corelistall}; do
 				defaultpath "${core}"
 			done
+			init_final_paths
+			# write to output file
+			echo $(printarr CORE_PATH_FINAL) >"${mrsamtmp}/default_paths"
 		else
 			[[ -s ${mrsamtmp}/default_paths ]] && source "${mrsamtmp}/default_paths"
 		fi
+	else
+		init_final_paths
 	fi
+	kill_game_path_vars
 }
 
 function GET_SYSTEM_FOLDER() {
@@ -474,84 +542,32 @@ function env_check() {
 	fi
 }
 
-function init_rbf_vars() {
-	# ======== CORE PATHS RBF ========
-	declare -g amigapathrbf=${ini_settings[amigapathrbf]:="_Computer"}
-	declare -g arcadepathrbf=${ini_settings[arcadepathrbf]:="_Arcade"}
-	declare -g atari2600pathrbf=${ini_settings[atari2600pathrbf]:="_Console"}
-	declare -g atari5200pathrbf=${ini_settings[atari5200pathrbf]:="_Console"}
-	declare -g atari7800pathrbf=${ini_settings[atari7800pathrbf]:="_Console"}
-	declare -g atarilynxpathrbf=${ini_settings[atarilynxpathrbf]:="_Console"}
-	declare -g c64pathrbf=${ini_settings[c64pathrbf]:="_Computer"}
-	declare -g fdspathrbf=${ini_settings[fdspathrbf]:="_Console"}
-	declare -g gbpathrbf=${ini_settings[gbpathrbf]:="_Console"}
-	declare -g gbcpathrbf=${ini_settings[gbcpathrbf]:="_Console"}
-	declare -g gbapathrbf=${ini_settings[gbapathrbf]:="_Console"}
-	declare -g genesispathrbf=${ini_settings[genesispathrbf]:="_Console"}
-	declare -g ggpathrbf=${ini_settings[ggpathrbf]:="_Console"}
-	declare -g megacdpathrbf=${ini_settings[megacdpathrbf]:="_Console"}
-	declare -g neogeopathrbf=${ini_settings[neogeopathrbf]:="_Console"}
-	declare -g nespathrbf=${ini_settings[nespathrbf]:="_Console"}
-	declare -g s32xpathrbf=${ini_settings[s32xpathrbf]:="_Console"}
-	declare -g smspathrbf=${ini_settings[smspathrbf]:="_Console"}
-	declare -g snespathrbf=${ini_settings[snespathrbf]:="_Console"}
-	declare -g tgfx16pathrbf=${ini_settings[tgfx16pathrbf]:="_Console"}
-	declare -g tgfx16cdpathrbf=${ini_settings[tgfx16cdpathrbf]:="_Console"}
-	declare -g psxpathrbf=${ini_settings[psxpathrbf]:="_Console"}
-}
-
-function kill_rbf_vars() {
-	# ======== CORE PATHS RBF ========
-	unset amigapathrbf
-	unset arcadepathrbf
-	unset atari2600pathrbf
-	unset atari5200pathrbf
-	unset atari7800pathrbf
-	unset atarilynxpathrbf
-	unset c64pathrbf
-	unset fdspathrbf
-	unset gbpathrbf
-	unset gbcpathrbf
-	unset gbapathrbf
-	unset genesispathrbf
-	unset ggpathrbf
-	unset megacdpathrbf
-	unset neogeopathrbf
-	unset nespathrbf
-	unset s32xpathrbf
-	unset smspathrbf
-	unset snespathrbf
-	unset tgfx16pathrbf
-	unset tgfx16cdpathrbf
-	unset psxpathrbf
-}
-
 # ======== CORE CONFIG ========
 function init_data() {
 	# Core to path mappings for rbf files
 	declare -gA CORE_PATH_RBF=(
-		["amiga"]="${amigapathrbf}"
-		["arcade"]="${arcadepathrbf}"
-		["atari2600"]="${atari2600pathrbf}"
-		["atari5200"]="${atari5200pathrbf}"
-		["atari7800"]="${atari7800pathrbf}"
-		["atarilynx"]="${atarilynxpathrbf}"
-		["c64"]="${c64pathrbf}"
-		["fds"]="${fdspathrbf}"
-		["gb"]="${gbpathrbf}"
-		["gbc"]="${gbcpathrbf}"
-		["gba"]="${gbapathrbf}"
-		["genesis"]="${genesispathrbf}"
-		["gg"]="${ggpathrbf}"
-		["megacd"]="${megacdpathrbf}"
-		["neogeo"]="${neogeopathrbf}"
-		["nes"]="${nespathrbf}"
-		["s32x"]="${s32xpathrbf}"
-		["sms"]="${smspathrbf}"
-		["snes"]="${snespathrbf}"
-		["tgfx16"]="${tgfx16pathrbf}"
-		["tgfx16cd"]="${tgfx16cdpathrbf}"
-		["psx"]="${psxpathrbf}"
+		["amiga"]=${ini_settings[amigapathrbf]:="_Computer"}
+		["arcade"]=${ini_settings[arcadepathrbf]:="_Arcade"}
+		["atari2600"]=${ini_settings[atari2600pathrbf]:="_Console"}
+		["atari5200"]=${ini_settings[atari5200pathrbf]:="_Console"}
+		["atari7800"]=${ini_settings[atari7800pathrbf]:="_Console"}
+		["atarilynx"]=${ini_settings[atarilynxpathrbf]:="_Console"}
+		["c64"]=${ini_settings[c64pathrbf]:="_Computer"}
+		["fds"]=${ini_settings[fdspathrbf]:="_Console"}
+		["gb"]=${ini_settings[gbpathrbf]:="_Console"}
+		["gbc"]=${ini_settings[gbcpathrbf]:="_Console"}
+		["gba"]=${ini_settings[gbapathrbf]:="_Console"}
+		["genesis"]=${ini_settings[genesispathrbf]:="_Console"}
+		["gg"]=${ini_settings[ggpathrbf]:="_Console"}
+		["megacd"]=${ini_settings[megacdpathrbf]:="_Console"}
+		["neogeo"]=${ini_settings[neogeopathrbf]:="_Console"}
+		["nes"]=${ini_settings[nespathrbf]:="_Console"}
+		["s32x"]=${ini_settings[s32xpathrbf]:="_Console"}
+		["sms"]=${ini_settings[smspathrbf]:="_Console"}
+		["snes"]=${ini_settings[snespathrbf]:="_Console"}
+		["tgfx16"]=${ini_settings[tgfx16pathrbf]:="_Console"}
+		["tgfx16cd"]=${ini_settings[tgfx16cdpathrbf]:="_Console"}
+		["psx"]=${ini_settings[psxpathrbf]:="_Console"}
 	)
 
 	# Core to long name mappings
@@ -1465,17 +1481,6 @@ function init_data() {
 		["zintrkcd"]="Oshidashi Zentrix (CD conversion)"
 		["zupapa"]=""
 	)
-}
-
-function startup_tasks() {
-	init_vars
-	init_excludes
-	createfolders
-	init_default_paths
-	init_final_paths
-	# write to output file
-	echo $(printarr CORE_PATH_FINAL) >"${mrsamtmp}/default_paths"
-	init_amigashared_path
 }
 
 declare -gl samquiet="no"
