Declare local variables as local
Move SAM_cleanup to global functions

--- a/.SuperAttract/SuperAttractSystem.ini
+++ b/.SuperAttract/SuperAttractSystem.ini
@@ -542,6 +542,21 @@ function env_check() {
 	fi
 }
 
+function SAM_cleanup() {
+	# Clean up by umounting any mount binds
+	[[ $(mount | grep -ic "${misterpath}/config") -eq 1 ]] && umount "${misterpath}/config"
+	# [[ $(mount | grep -ic ${amigashared}) != "0" ]] && umount "${amigashared}"
+	[[ -d "${misterpath}/bootrom" ]] && [[ $(mount | grep -ic 'bootrom') != "0" ]] && umount "${misterpath}/bootrom"
+	[[ -f "${CORE_PATH_FINAL[NES]}/boot1.rom" ]] && [[ $(mount | grep -ic 'nes/boot1.rom') != "0" ]] && umount "${CORE_PATH_FINAL[NES]}/boot1.rom"
+	[[ -f "${CORE_PATH_FINAL[NES]}/boot2.rom" ]] && [[ $(mount | grep -ic 'nes/boot2.rom') != "0" ]] && umount "${CORE_PATH_FINAL[NES]}/boot2.rom"
+	[[ -f "${CORE_PATH_FINAL[NES]}/boot3.rom" ]] && [[ $(mount | grep -ic 'nes/boot3.rom') != "0" ]] && umount "${CORE_PATH_FINAL[NES]}/boot3.rom"
+	[[ -p ${SAM_Activity_pipe} ]] && rm -f ${SAM_Activity_pipe}
+	[[ -e ${SAM_Activity_pipe} ]] && rm -f ${SAM_Activity_pipe}
+	[[ -p ${SAM_cmd_pipe} ]] && rm -f ${SAM_cmd_pipe}
+	[[ -e ${SAM_cmd_pipe} ]] && rm -f ${SAM_cmd_pipe}
+	samquiet " Cleaned up mounts."
+}
+
 # ======== CORE CONFIG ========
 function init_data() {
 	# Core to path mappings for rbf files
