Some changes for updating

--- a/.SuperAttract/SuperAttractSystem.ini
+++ b/.SuperAttract/SuperAttractSystem.ini
@@ -542,7 +542,7 @@ function env_check() {
 	fi
 }
 
-function SAM_cleanup() {
+function sam_cleanup() {
 	# Clean up by umounting any mount binds
 	[[ $(mount | grep -ic "${misterpath}/config") -eq 1 ]] && umount "${misterpath}/config"
 	# [[ $(mount | grep -ic ${amigashared}) != "0" ]] && umount "${amigashared}"
