Change to internal update timer for tty2oled

--- a/.SuperAttract/SuperAttractSystem.ini
+++ b/.SuperAttract/SuperAttractSystem.ini
@@ -108,7 +108,6 @@ function startup_tasks() {
 		declare -g MCP_timeout_minutes=
 		# From ini
 		declare -gl menuonly=${ini_settings[menuonly]:="yes"}
-		init_tty2oled_vars
 	elif [ "${samprocess}" == "SuperAttract_tty2oled" ]; then
 		declare -g ttydevice="/dev/ttyUSB0"
 		declare -g ttypicture="/media/fat/tty2oled/pics"
@@ -116,6 +115,7 @@ function startup_tasks() {
 		declare -g prev_name_scroll=
 		declare -g prev_counter=
 		# From ini
+		declare -gi gametimer=${ini_settings[gametimer]:=120}
 		declare -gl ttyuseack=${ini_settings[ttyuseack]:="no"}
 		declare -gi ttyscroll_speed=${ini_settings[ttyscroll_speed]:=1}
 		declare -gi ttyscroll_speed_int=$((${ttyscroll_speed} - 1))
