More cleanups for init stop

--- a/.SuperAttract/SuperAttractSystem.ini
+++ b/.SuperAttract/SuperAttractSystem.ini
@@ -554,7 +554,31 @@ function sam_cleanup() {
 	[[ -e ${SAM_Activity_pipe} ]] && rm -f ${SAM_Activity_pipe}
 	[[ -p ${SAM_cmd_pipe} ]] && rm -f ${SAM_cmd_pipe}
 	[[ -e ${SAM_cmd_pipe} ]] && rm -f ${SAM_cmd_pipe}
-	samquiet " Cleaned up mounts."
+	samquiet " SAM Cleaned up!"
+}
+
+function tty_cleanup() {
+	# Clean up by umounting any mount binds
+	[ -f /tmp/tty2oled_sleep ] && rm /tmp/tty2oled_sleep &>/dev/null
+	[ -p ${TTY_cmd_pipe} ] && rm -f ${TTY_cmd_pipe}
+	[ -e ${TTY_cmd_pipe} ] && rm -f ${TTY_cmd_pipe}
+	samquiet " TTY Cleaned up!"
+}
+
+function mcp_cleanup() {
+	[[ -p ${MCP_cmd_pipe} ]] && rm ${MCP_cmd_pipe}
+	[[ -p ${MCP_CoreName_Change_pipe} ]] && rm ${MCP_CoreName_Change_pipe}
+	[[ -p ${MCP_Corename_Activity_pipe} ]] && rm ${MCP_Corename_Activity_pipe}
+	[[ -p ${MCP_DeviceChange_pipe} ]] && rm ${MCP_DeviceChange_pipe}
+	[[ -p ${MCP_Activity_pipe} ]] && rm ${MCP_Activity_pipe}
+	[[ -p ${SAM_Activity_pipe} ]] && rm ${SAM_Activity_pipe}
+	[[ -e ${MCP_cmd_pipe} ]] && rm ${MCP_cmd_pipe}
+	[[ -e ${MCP_CoreName_Change_pipe} ]] && rm ${MCP_CoreName_Change_pipe}
+	[[ -e ${MCP_DeviceChange_pipe} ]] && rm ${MCP_DeviceChange_pipe}
+	[[ -e ${MCP_Corename_Activity_pipe} ]] && rm ${MCP_Corename_Activity_pipe}
+	[[ -e ${MCP_Activity_pipe} ]] && rm ${MCP_Activity_pipe}
+	[[ -e ${SAM_Activity_pipe} ]] && rm ${SAM_Activity_pipe}
+	samquiet " MCP Cleaned up!"
 }
 
 # ======== CORE CONFIG ========
