--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -30,7 +30,7 @@ mute="No"
 # How do we exit SAM?
 # playcurrentgame="No" - SAM will reboot to MiSTer Menu when a button is pushed
 # playcurrentgame="Yes" - SAM will stay in the current game when exiting. It's advised to use mute="No" in this case so you don't have to turn up the volume.
-playcurrentgame="No" 
+playcurrentgame="Yes" 
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
