Clean up the vardebug output
Also, start on fixing start and stop commands in SAM not entirely working, yet.

--- a/.SuperAttract/SuperAttractSystem.ini
+++ b/.SuperAttract/SuperAttractSystem.ini
@@ -1547,6 +1547,12 @@ function regen_ini_settings() {
 	echo " Done!"
 }
 
+function vardebug_out() {
+	echo "" | >"${mrsamtmp}/vardump_${samprocess}.log"
+	declare -p | grep -wvf /tmp/$$ | grep -v ^\" | grep -v ^\" >>"${mrsamtmp}/vardump_${samprocess}.log"
+	rm /tmp/$$
+}
+
 if [[ -s "${mrsamtmp}/ini_settings" ]]; then
 	ini_file_md5=$(md5sum ${misterscripts}/Super_Attract_Mode.ini | awk '{print $1}')
 	source "${mrsamtmp}/ini_settings"
